@@ -20,8 +20,6 @@ package org.apache.ofbiz.base.util;
 
 import java.io.File;
 import java.net.MalformedURLException;
-import java.net.URI;
-import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
@@ -81,13 +79,11 @@ public final class UtilURL {
      */
     public static URL fromResource(String resourceName, ClassLoader loader) {
         URL url = URL_MAP.get(resourceName);
-        URI uri;
         if (url != null) {
             try {
-                uri = new URI(url.toString());
-                url = uri.toURL();
-            } catch (IllegalArgumentException | URISyntaxException | MalformedURLException e) {
-                Debug.logWarning(e, "Exception thrown while copying URL", MODULE);
+                return new URL(url.toString());
+            } catch (MalformedURLException e) {
+                Debug.logWarning(e, "Exception thrown while copying URL: ", MODULE);
             }
         }
         if (loader == null) {
@@ -136,7 +132,7 @@ public final class UtilURL {
             if (file.exists()) {
                 url = file.toURI().toURL();
             }
-        } catch (MalformedURLException e) {
+        } catch (java.net.MalformedURLException e) {
             Debug.logError(e, "unable to retrieve URL for file: " + filename, MODULE);
         }
         return url;
@@ -144,12 +140,10 @@ public final class UtilURL {
 
     public static URL fromUrlString(String urlString) {
         URL url = null;
-        URI uri;
         try {
-            uri = new URI(urlString);
-            url = uri.toURL();
-        } catch (IllegalArgumentException | URISyntaxException | MalformedURLException e) {
-            // We purposely don't want to do anything here.
+            url = new URL(urlString);
+        } catch (MalformedURLException e) {
+            // We purposely don't want to do anything here
         }
         return url;
     }
